# dataset-rising

./: .gitignore  LICENSE.md  README.md  down.sh  pyproject.toml  requirements.txt  uninstall.sh  up.sh
crawl/: crawl.py
crawl/crawler/: crawler.py  helpers.py
database/: README.md  append.py  create_database.py  gap.py  import.py  pick.py  preview.py  select_moo.py  start-mongodb.sh  stop-mongodb.sh  test.py
database/entities/: implication.py  post.py  tag.py
database/importer/: importer.py
database/selector/: selector.py
database/tag_normalizer/: tag_normalizer.py  util.py
database/translator/: e621_translator.py  helpers.py  translator.py
database/utils/: enums.py  load_yaml.py  progress.py
dataset/: build.py
dataset/tasks/: load.py  resize.py
dataset/utils/: balance.py  download.py  format.py  prune.py  resize.py  selection_source.py
examples/dataset/: prefilter.yaml
examples/preview/: preview.html.jinja
examples/select/: curated.yaml  negative.yaml  positive.yaml  uncurated.yaml
examples/select/negative/: artists-curated.yaml  artists.yaml  extreme.yaml  hyper.yaml  obesity.yaml  score.yaml  species.yaml  style.yaml
examples/select/positive/: accessories.yaml  act.yaml  anatomy.yaml  artists.yaml  clothing.yaml  dominance.yaml  equines.yaml  force.yaml  species.yaml  style.yaml
examples/select/tier-1/: tier-1.yaml
examples/select/tier-1/helpers/: artists.yaml  style.yaml
examples/select/tier-1/helpers/negative/: score.yaml  style.yaml
examples/select/tier-2/: tier-2.yaml
examples/tag_normalizer/: aspect_ratios.yaml  category_weights.yaml  prefilter.yaml  rewrites.yaml  symbols.yaml
setup/: README.md  setup-builder.sh  setup-ubuntu-x64.sh
src/crawl/: crawl.py  dr_crawl.py
src/crawl/crawler/: crawler.py  helpers.py
src/database/: append.py  create_database.py  down.py  dr_add_tag.py  dr_append.py  dr_db_create.py  dr_db_down.py  dr_db_uninstall.py  dr_db_up.py  dr_gap.py  dr_import.py  dr_preview.py  dr_select.py  gap.py  import.py  pick.py  preview.py  start-mongodb.sh  stop-mongodb.sh  uninstall.py  up.py
src/database/entities/: implication.py  post.py  tag.py
src/database/importer/: alias_importer.py  importer.py
src/database/selector/: selected_sample.py  selector.py
src/database/tag_normalizer/: tag_normalizer.py  util.py
src/database/translator/: danbooru_translator.py  e621_translator.py  gelbooru_translator.py  helpers.py  rule34_translator.py  translator.py
src/database/utils/: db_utils.py  enums.py  source_url.py
src/dataset/: build.py  dr_build.py  dr_join.py
src/dataset/utils/: balance.py  download.py  format.py  load.py  prune.py  resize.py  selection_source.py  split.py
src/tests/: test_balance.py
src/train/: README.md  covert_sd.py  covert_sdxl.py  dr_convert_sd.py  dr_convert_sdxl.py  dr_train.py  dr_train_xl.py  train.py
src/utils/: progress.py
train/: train.py
util/: wait.sh
