[project]
name = 'DatasetRising'
version = '0.1.1'
description = 'Toolchain for creating and training Stable Diffusion models with custom datasets'
readme = 'README.md'
requires-python = '>=3.9.6,<3.11'
license = { file = 'LICENSE.md' }
dynamic = ['dependencies']

keywords = ['training', 'crawler', 'machine-learning', 'imageboard', 'booru', 'danbooru', 'ml', 'dataset',
    'dataset-generation', 'gelbooru', 'e621', 'imagebooru', 'finetuning', 'mlops', 'huggingface', 'mlops-workflow',
    'stable-diffusion', 'huggingface-users', 'diffusers', 'sdxl']

classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: GPU',
    'Environment :: GPU :: NVIDIA CUDA',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Image Processing'
]

[project.urls]
'Homepage' = 'https://github.com/hearmeneigh/dataset-rising'
'Bug Reports' = 'https://github.com/hearmeneigh/dataset-rising/issues'
'Source' = 'https://github.com/hearmeneigh/dataset-rising'

[project.scripts]
'dr-db-up' = 'database.up:main'
'dr-db-down' = 'database.down:main'
'dr-db-uninstall' = 'database.uninstall:main'
'dr-crawl' = 'crawl.crawl:main'
'dr-append' = 'database.append:main'
'dr-gap' = 'database.gap:main'
'dr-import' = 'database.import:main'
'dr-pick' = 'database.pick:main'
'dr-preview' = 'database.preview:main'
'dr-build' = 'dataset.build:main'
'dr-train' = 'train.train:main'
'dr-convert-sd' = 'train.convert_sd:main'
'dr-convert-sdxl' = 'train.convert_sdxl:main'

[tools.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}

[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

