[project]
name = 'DatasetRising'
version = '0.1.66'
description = 'Toolchain for creating and training Stable Diffusion models with custom datasets'
readme = 'README.md'
requires-python = '>=3.8'
license = { file = 'LICENSE.md' }
dynamic = ['dependencies']

keywords = ['training', 'crawler', 'machine-learning', 'imageboard', 'booru', 'danbooru', 'ml', 'dataset',
    'dataset-generation', 'gelbooru', 'e621', 'imagebooru', 'finetuning', 'mlops', 'huggingface', 'mlops-workflow',
    'stable-diffusion', 'huggingface-users', 'diffusers', 'sdxl']

classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Environment :: GPU',
    'Environment :: GPU :: NVIDIA CUDA',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Image Processing'
]

[project.urls]
'Homepage' = 'https://github.com/hearmeneigh/dataset-rising'
'Bug Reports' = 'https://github.com/hearmeneigh/dataset-rising/issues'
'Source' = 'https://github.com/hearmeneigh/dataset-rising'

[project.scripts]
'dr-db-up' = 'database.dr_db_up:main'
'dr-db-create' = 'database.dr_db_create:main'
'dr-db-down' = 'database.dr_db_down:main'
'dr-db-uninstall' = 'database.dr_db_uninstall:main'
'dr-crawl' = 'crawl.dr_crawl:main'
'dr-add-tag' = 'database.dr_add_tag:main'
'dr-append' = 'database.dr_append:main'
'dr-gap' = 'database.dr_gap:main'
'dr-import' = 'database.dr_import:main'
'dr-select' = 'database.dr_select:main'
'dr-preview' = 'database.dr_preview:main'
'dr-join' = 'dataset.dr_join:main'
'dr-build' = 'dataset.dr_build:main'
'dr-train' = 'train.dr_train:main'
'dr-convert-sd' = 'train.dr_convert_sd:main'
'dr-convert-sdxl' = 'train.dr_convert_sdxl:main'

[tools.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}

[build-system]
requires = ['setuptools>=43.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

